<resources>
    <string name="app_name">Fneclis Calculator</string>
    <string name="button">Button</string>
    <string name="book_title">book_title</string>
    <string name="todo">TODO</string>
    <string name="noBooksFound">للأسف…لا يوجد تخصص يطابق ما تبحث عنه.</string>
    <string name="threePTS">…</string>
    <string name="cours">COURS</string>
    <string name="td">TD</string>
    <string name="tp">TP</string>
    <string name="APPLICATION_ID">ca-app-pub-1974446900209189~8596835279</string>
    <string name="adUnitId">ca-app-pub-1974446900209189/7819898081</string>
    <string name="Licence">Licence</string>
    <string name="master">Master</string>
    <string name="firstSemester">السّداسي الأوّل</string>
    <string name="secondSemester">السّداسي الثّاني</string>
    <string name="firstYear">السّـنة الأولـى</string>
    <string name="secondYear">السّـنة الثّـانية</string>
    <string name="thirdYear">السّـنة الثّـالثة</string>
    <string name="abri_name">abri Name</string>
    <string name="full_name">full Name</string>
    <string name="madeWithLove">صنع بحب في الجزائر</string>
    <string name="made_with_love_in_algeria">Powered by Anis OUKEBDANE</string>
    <string name="howEx">كيف كانت تجربتك معنا ؟</string>
    <string name="title_activity_ads_page">AdsPage</string>
    <string name="action_settings">Settings</string>
    <string name="forFree">يساعد هذا الإعلان على أن يظل التطبيق مجانيا</string>
    <string name="title_activity_ads">AdsActivity</string>

    <string name="hello_world">Hello world!</string>
    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="wi_fi">لتوفير أفضل جو للمستخدم يقوم هذا التطبيق بتفعيل الواي فاي (Wi-Fi) تلقائيا</string>
    <string name="agree">حسنا</string>
    <string name="noThanks">لا شكرا</string>
    <string name="policy">Politique de confidentialité</string>
    <string name="privacyTXT">بما ان رضاكم عن تطبيقنا هو أعلى نقطة في هرم أهدافنا، و لأننا نسعى دائما لتقديم الأفضل فقط لأننا نتعامل مع الأفضل، كان لزاماً علينا أن نعلمك عزيز المستخدم بكل البيانات التي عليك توفيرها للتطبيق ليقدم لك أفضل أداء ممكن. لذا أدعوك عزيز المستخدم إلى أن تشرفنا بزيارتك .لموقعنا و الإطلاع على سياسة الخصوصية المتعلقة بالتطبيق.</string>
    <string name="privacyBtnTxt">سياسة الخصوصية</string>
    <string name="contentTxt">كما يمكنك الإطلاع على سياسة المحتوى كما هو مبين أدناه</string>
    <string name="contentBtnTxt">سياسة المحتوى</string>
    <string name="calculer">Calculer</string>
    <string name="rechercher">Rechercher</string>
    <string name="save">Save</string>
    <string name="r_sultats_enregistr_s">Résultats enregistrés</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="envoyer">Envoyer</string>
    <string name="merci_d_avoir_signal_ce_probl_me_nous_vous_contacterons_par_e_mail_le_plus_rapidement_possible">Merci
        d’avoir signalé ce problème, nous vous contacterons par e-mail le plus rapidement possible
    </string>
    <string name="motionn_e_brievement_le_probl_me_dans_cette_question">Motionnée brievement le problème dans cette
        question
    </string>
    <string name="les_r_sultats_ont_t_supprim_s">Les résultats ont été supprimés..Vous devrez peut-être actualiser la page pour voir les résultats</string>
<!--    <string name="addSpeciality">هل تخصصك غير موجود ؟ أضف تخصصك من هنا</string>-->
    <string name="addSpeciality">Votre spécialisation n\'est pas listée? Ajoutez-la par ici.</string>
    <string name="quelle_est_votre_sp_cialit">Quelle est votre spécialité ?</string>
    <string name="veuillez_indiquer_ici_le_nom_de_votre_sp_cialisation">Veuillez indiquer ici le nom de votre spécialisation</string>
    <string name="submit">Soumettre</string>
    <string name="add_another_course">Ajouter un module</string>
    <string name="what_is_the_name_of_the_course">Quel est le nom du module ?</string>
    <string name="write_it_here_please">Écrivez-le ici, SVP…</string>
    <string name="coeffiecient">Coeffiecient</string>
    <string name="veuillez_tout_s_lectionner_si_le_cours_est_un_cours_td_tp_seul_un_cours_avec_td_seulement_ou_et_tp_ou_tout_autre_cas_sp_cifique">Veuillez tout sélectionner si le cours est un cours/TD/TP seul, un cours avec TD seulement ou/et TP, ou tout autre cas spécifique</string>
    <string name="veuillez_tout_s_lectionner_si_la_formule">Veuillez sélectionner une formule de calcul pour ce module, exp: (Cours x 60% + TD x 40%) x 2</string>
    <string name="pourcentage">Pourcentage (%)</string>
    <string name="this_field_is_required">Ce champ est obligatoire</string>
    <string name="cours_td_tp_seul_x_coefficient">Cours/TD/TP seul x coefficient</string>
    <string name="cours_x_pourcentage_td_x_pourcentage_x_coefficient">(Cours x pourcentage + TD x pourcentage) x coefficient</string>
    <string name="cours_x_pourcentage_tp_x_pourcentage_x_coefficient">(Cours x pourcentage + TP x pourcentage) x coefficient</string>
    <string name="cours_x_pourcentage_td_x_pourcentage_tp_x_pourcentage_x_coefficient">(Cours x pourcentage + TD x pourcentage + TP x pourcentage) x coefficient</string>
    <string name="veuillez_s_lectionner_au_moins_une_option_cours_td_ou_tp">Veuillez sélectionner au moins une option Cours, TD ou TP</string>
    <string name="veuillez_s_lectionner_au_moins_une_formule">Veuillez sélectionner au moins une formule de calcule pour ce module</string>

    <string name="veuillez_remplir_tous_les_champs">Veuillez remplir tous les champs</string>
    <string name="veuillez_ajouter_un_cours">Veuillez ajouter un cours</string>

</resources>
