<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="@android:color/transparent">

    <ImageButton
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/close"
        android:contentDescription="@string/todo"
        tools:layout_editor_absoluteX="286dp"
        tools:layout_editor_absoluteY="6dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exit"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/vipraw"
                android:gravity="center|top"
                android:padding="10dp"
                android:text="@string/merci_d_avoir_signal_ce_probl_me_nous_vous_contacterons_par_e_mail_le_plus_rapidement_possible"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/motionn_e_brievement_le_probl_me_dans_cette_question"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textSize="18sp"
                tools:targetApi="o" />

            <Button
                    android:id="@+id/send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editText"
                    android:layout_marginTop="13dp"
                    android:background="@drawable/agree_blue"
                    android:fontFamily="@font/vipraw"
                    android:text="@string/envoyer"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>