<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="20dp"
            app:cardBackgroundColor="@color/bg_color"
            app:cardCornerRadius="20dp">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

            <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/note_ic"
                    tools:ignore="VectorDrawableCompat" />

            <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView2"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/monadi"
                    android:gravity="center"
                    android:paddingLeft="8dp"
                    android:paddingTop="16dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="16dp"
                    android:text="@string/wi_fi"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            <Button
                    android:id="@+id/agreeBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView3"
                    android:background="@drawable/agreebg"
                    android:focusable="true"
                    android:fontFamily="@font/monadi"
                    android:text="@string/agree"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>